src/test/ui/parser/no-hex-float-literal.stderr
error: hexadecimal float literal is not supported
  --> $DIR/no-hex-float-literal.rs:5:5
   |
LL |     0x567.89;
   |     ^^^^^^^^

error: aborting due to previous error

