src/test/ui/parser/no-hex-float-literal.rs
// error-pattern:hexadecimal float literal is not supported

fn main() {
    0xABC.Df;
    0x567.89;
    0xDEAD.BEEFp-2f;
}
